2020-04-13  Joonghun Park  <jh718.park@samsung.com>

        Unreviewed. Remove redundant move in return statement.

        Return statement already returns rvalue,
        so we don't need move here.

        This patch removes the build warning below since r259922.
        warning: redundant move in return statement [-Wredundant-move]

        * wtf/persistence/PersistentCoders.cpp:
        (WTF::Persistence::Coder<CString>::decode):
        (WTF::Persistence::decodeStringText):
        (WTF::Persistence::Coder<SHA1::Digest>::decode):
        * wtf/persistence/PersistentCoders.h:

2020-04-12  Mark Lam  <mark.lam@apple.com>

        Enable the ability to build the ASM LLInt for ARMv7k.
        https://bugs.webkit.org/show_bug.cgi?id=210412

        Reviewed by Sam Weinig.

        Remove some old code that forces the ENABLE(C_LOOP) to be true if ENABLE(JIT) is
        false.  These 2 options used to be mutually exclusive, but is no more.  Now, we
        allow platforms to choose to build the ASM LLInt instead even if ENABLE(JIT) is
        false.

        * wtf/PlatformEnable.h:

2020-04-12  Darin Adler  <darin@apple.com>

        [Cocoa] Minor tweaks to code to get locale strings to remove one-time-initialization booleans
        https://bugs.webkit.org/show_bug.cgi?id=210410

        Reviewed by Sam Weinig.

        * wtf/text/cocoa/TextBreakIteratorInternalICUCocoa.cpp:
        (WTF::textBreakLocalePreference): Use auto, and no need to explicitly mark this inline.
        (WTF::topLanguagePreference): Use auto.
        (WTF::localeIDInBuffer): Renamed from getLocale. Changed to return a std::array and to
        handle failure cases afterward rather than by initializing beforehand.
        (WTF::getSearchLocale): Deleted.
        (WTF::currentSearchLocaleID): Using "static const auto", wrote this in a straightforward
        and compact way, using localeIDInBuffer and topLanguagePreference.