@@ -1,3 +1,13 @@
+2020-04-13  David Kilzer  <ddkilzer@apple.com>
+
+        Fix clang static analyzer warnings about unused instance variables in WebIconDatabase, WKView
+        <https://webkit.org/b/210427>
+
+        Reviewed by Alex Christensen.
+
+        * wtf/Compiler.h:
+        (WK_UNUSED_INSTANCE_VARIABLE): Add.
+
 2020-04-13  Joonghun Park  <jh718.park@samsung.com>
 
         Unreviewed. Remove redundant move in return statement.
